
2011-February-26 Struan Robertson

	* CollisionOperator.h/cpp, System.h/.cpp: Collision operator code moved
	from the System class to the Collision operator class. 

2011-February-26 Struan Robertson

	* CollisionOperator.h/cpp: Addition of a new class to encapsulate the 
	collision operator, as part of the refactoring of system.h/.cpp. 

2011-February-25 Struan Robertson

	* fitting.cpp: Altered to write Chi^2 to output stream. 

2011-February-16 Chris Morley

	* src/MolecularComponents.cpp,src/MolecularComponents.h: added
	alternative input me:HfAT0 for atom based heat of formation.
	
	* librarymols.xml has an example of this
	* examples/H2Ominimal/H2Ominimal.xml: a not very realistic example
	intended to demontrate use of library molecules

	* Documentation/Adding a molecule to the library.html,
	Documentation/MESMER manual.doc updated (and edited a bit).

2011-February-13 Chris Morley

	* src/System.cpp: Redo <me:eigenvalues> so that a value of -1
	or "all" prints all the eigenvalues (ctest and XML), otherwise
	the number specified. The default (in defaults.xml) is 0.
	Previously there was no way of printing 0;

	* MesmerQA/Acetyl O2 association/Acetyl_O2_association.xml,
	MesmerQA/cyclopropene isomerization reservoir state/
	Cyclopropene_isomerization_reservoir_state_test.xml,
	MesmerQA/cyclopropene isomerization/Cyclopropene_isomerization_test.xml,
	MesmerQA/HSO2/HSO2_test.xml,
	MesmerQA/OH acetylene association/OH_acetylene_association_test.xml,
	MesmerQA/pentyl/pentyl_isomerization_test.xml,
	<me:eigenvalues> modified, generally 0 to all to retain same QA output.
	
	*src/main.cpp: make QA test failure more visible

2011-February-11 Struan Robertson

	* fitting.cpp: Fix made to the direction search which was being incorrectly 
	read from the direction matrix. 

2011-February-09 Struan Robertson

	* HinderedRotorCM1D.cpp: Hindered rotor configuration integral extended. 

2011-February-04 Struan Robertson
