@@ -4,7 +4,6 @@
 #include <map>
 #include <string>
 #include <vector>
-#include "System.h"
 
 namespace mesmer
 {
